# hermes-tasklane

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  group-chat-usage.md  hermes-install-prompt.md  install.md  onboarding.md  release-checklist.md  task-format.md
examples/: config.example.json  example-task.md
scripts/: install.sh
skills/hermes-tasklane-intake/: SKILL.md
src/hermes_tasklane/: __init__.py  cli.py  dashboard.py
systemd/: hermes-tasklane-dashboard.service  hermes-tasklane-reconcile.service  hermes-tasklane-reconcile.timer  hermes-tasklane-sync.service  hermes-tasklane-sync.timer  hermes-tasklane-watch.service  hermes-tasklane-watch.timer
tests/: test_cli_smoke.py
