[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-tasklane"
version = "0.1.0"
description = "File-based task inbox and delivery reconciliation for Hermes governed runs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Smokefarmer"}]
keywords = ["hermes", "queue", "automation", "governed-runs", "github"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
hermes-tasklane = "hermes_tasklane.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
